--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_size_text: ^3.0.0-nullsafety.0
   carousel_slider: ^4.0.0-nullsafety.0
-  convex_bottom_bar: ^3.0.0
   cupertino_icons: ^1.0.2
+  flutter_feather_icons: ^2.0.0
+  horizontal_card_pager: ^1.1.1
+  money2: ^2.1.0
+  percent_indicator: ^3.0.1
+  salomon_bottom_bar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
