--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: basicui
-description: A new Flutter project.
+description: Non-production app for submission in Dicoding course. Developed by Andre Yonathan Sukhoco.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
