--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
   fonts:
     - family: Montserrat
       fonts:
@@ -76,3 +78,15 @@ flutter:
         - asset: assets/fonts/Montserrat-BlackItalic.ttf
           weight: 900
           style: italic
+    - family: "Fira Code"
+      fonts:
+        - asset: assets/fonts/FiraCode-Light.ttf
+          weight: 300
+        - asset: assets/fonts/FiraCode-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/FiraCode-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/FiraCode-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/FiraCode-Bold.ttf
+          weight: 700
