--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   carousel_slider: ^4.0.0-nullsafety.0
   cupertino_icons: ^1.0.2
