--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_feather_icons: ^2.0.0
   horizontal_card_pager: ^1.1.1
-  money2: ^2.1.0
+  money2: ^2.1.4
   percent_indicator: ^3.0.1
   salomon_bottom_bar: ^3.0.0
+  simple_animations: ^3.1.1
+  supercharged: ^2.0.0
 
 dev_dependencies:
   flutter_test:
